fix(styles): spacing, font sizes, line heights, etc

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -12,9 +12,9 @@ html {
 body {
   font-family: "Inter", sans-serif;
   font-weight: normal;
-  font-size: 1.6rem;
+  font-size: 16px;
   color: $grey-900;
-  line-height: 1.2;
+  line-height: 24px;
   margin: 0 auto;
   background: $grey-50;
 }
@@ -31,8 +31,8 @@ button {
   background: none;
   border: none;
   color: inherit;
-  font-size: 1.6rem;
-  line-height: 1.2;
+  font-size: 16px;
+  line-height: 20px;
   cursor: pointer;
 }
 
