--- a/src/assets/scss/typography.scss
+++ b/src/assets/scss/typography.scss
@@ -68,12 +68,27 @@ h1, h2, h3 {
   margin: 0;
 }
 
+h1 {
+  font-size: 32px;
+  line-height: 36px;
+  font-weight: 700;
+}
+
 h3 {
   font-weight: 600;
+  font-size: 20px;
+  line-height: 24px;
+}
+
+h4 {
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
 }
 
 .text-sm {
-  font-size: 1.3rem;
+  line-height: 24px;
+  font-size: 12px;
 }
 
 .truncate {
